fixed overlay menu on smaller screens

--- a/style.css
+++ b/style.css
@@ -63,7 +63,7 @@
   transition-duration: 0.2s;
   transform: scaleX(0.9) scaleY(0.9);
 }
-@media only screen and (min-width: 1100px) {  
+@media only screen and (min-width: 1100px) {
   .menu {
     background: rgba(85, 85, 85, 0.7);
     width: 260px;
@@ -119,7 +119,7 @@
     transform: scaleX(0.85) scaleY(0.85);
   }
 }
-@media only screen and (max-width: 1100px) {  
+@media only screen and (max-width: 1100px) {
   .menu {
     display: none;
   }
@@ -165,15 +165,42 @@ p a:hover {
   transition-duration: 0.3s;
 }
 @media only screen and (min-width: 1100px) {
+  .link-tree {
+    display: none;    
+  }
+  .link-tree > div {
+    display: none; 
+  }
   nav {
     display: none;
-  }
+  }    
+}
 @media only screen and (max-width: 1100px) {
+  .link-tree {
+    display: flex;
+    flex-wrap: wrap;
+    flex-direction: column;  
+    margin-bottom: -10%; 
+    position: fixed
+  }
+  .link-tree > div {
+    font-size: 200%;
+    width: 7em;
+    margin: 10px;
+    text-indent: 1em;
+    line-height: 75px;
+    font-size: 30px;
+    color: white;
+    background-color: rgba(65, 65, 65, 0.95); 
+  }
+  .link-tree > div:hover {    
+    color: aqua;                  
+  }
   nav input {
-    display: none;
+    display: none;    
   }
   nav {
-    overflow: hidden;
+    overflow: hidden;    
   }
   nav ul {
     overflow: hidden;
@@ -183,26 +210,17 @@ p a:hover {
     margin: 0;
     list-style: none;
   }
+  nav li a {
+    all: unset;
+    cursor: default;
+    color: white;    
+  }
+  nav li a:hover {    
+    color: aqua;
+    text-decoration-line: underline;    
+  }
   nav input:checked ~ ul {
     width: 100%;
-    height: 100%;
-  }
-  a.button {
-    background-color: silver;
-    height: fit-content;
-    width: fit-content;
-    font-size: 200%;
-    padding: 0.5em;
-    text-align: center;
-  }
-  a.button:hover {
-    background-color: gold;
-  }
-  .link-tree {
-    display: flex;
-    flex-wrap: wrap;
-    flex-direction: column;
-    margin-left: 10em;
-   
+    height: 100%;         
   }  
 }
